# doe_ws

./: .gitignore  .gitmodules  doe_lidar_turbine.launch.py  iris_lidar_turbine.launch.py
config/: doe_lidar_bridge.yaml
config/default_params/: gazebo-doe.parm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_node_listener/share/lidar_node_listener/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_scan_controller/share/lidar_scan_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_scan_controller/share/lidar_scan_controller/cmake/: lidar_scan_controllerConfig-version.cmake  lidar_scan_controllerConfig.cmake
install/scratch/share/scratch/: package.bash  package.zsh
install/sf45b_serial_node/share/sf45b_serial_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
models/doe_with_lidar/: model.config  model.sdf
models/turbine/: model.sdf
robots/: doe_lidar.launch.py  iris_lidar.launch.py
src/: scratch.ipynb  scratch.py
src/lidar_node_listener/: package.xml  setup.cfg  setup.py
src/lidar_node_listener/lidar_node_listener/: subscriber_member_function.py
src/lidar_scan_controller/: CMakeLists.txt  package.xml
src/scratch/: CMakeLists.txt
src/scratch/src/: scratch.cpp
testing/: test.c  test.h  test.idl
worlds/: doe_lidar_turbine.sdf
(+6 files in other folders)
